# histolytics

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/: index.html
api/data/cervix_nuclei/: index.html
api/data/cervix_nuclei_crop/: index.html
api/data/cervix_tissue/: index.html
api/data/cervix_tissue_crop/: index.html
api/data/hgsc_cancer_he/: index.html
api/data/hgsc_cancer_inst_mask/: index.html
api/data/hgsc_cancer_nuclei/: index.html
api/data/hgsc_cancer_type_mask/: index.html
api/data/hgsc_nuclei_wsi/: index.html
api/data/hgsc_stroma_he/: index.html
api/data/hgsc_stroma_nuclei/: index.html
api/data/hgsc_tissue_wsi/: index.html
api/losses/bce/: index.html
api/losses/ce/: index.html
api/losses/dice/: index.html
api/losses/focal/: index.html
api/losses/joint_loss/: index.html
api/losses/mae/: index.html
api/losses/mse/: index.html
api/losses/multi_task_loss/: index.html
api/losses/ssim/: index.html
api/losses/tversky_loss/: index.html
api/metrics/accuracy_multiclass/: index.html
api/metrics/aggregated_jaccard_index/: index.html
api/metrics/average_precision/: index.html
api/metrics/dice2/: index.html
api/metrics/dice_multiclass/: index.html
api/metrics/f1score_multiclass/: index.html
api/metrics/iou_multiclass/: index.html
api/metrics/pairwise_object_stats/: index.html
api/metrics/pairwise_pixel_stats/: index.html
api/metrics/panoptic_quality/: index.html
api/metrics/sensitivity_multiclass/: index.html
api/metrics/specificity_multiclass/: index.html
api/slide_reader/: index.html
api/wsi_segmenter/: index.html
docs/: getting_started.md  index.md
docs/api/: index.md  wsi_segmenter.md
docs/user_guide/: index.md  panoptic_segmentation.ipynb
getting_started/: index.html
installation/: index.html
search/: search_index.json
src/histolytics/: __init__.py  wsi_segmenter.py
tests/: test_clustering.py  test_collagen.py  test_graphs.py  test_grids.py  test_medial.py  test_models.py  test_nuc_feats.py
user_guide/: index.html
user_guide/panoptic_segmentation/: index.html
(+226 files in other folders)
