[project]
name = "histolytics"
version = "0.1.0"
description = "Panoptic Segmentation and WSI Spatial Analysis"
readme = "README.md"
authors = [
    { name = "Oskari Lehtonen", email = "oskari.lehtonen@helsinki.fi" }
]
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.6",
    "cellseg-models-pytorch>=0.1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "pymdown-extensions>=10.15",
]
